docs: 물수리 프로젝트 소개 웹페이지 배포
- 홈 화면
- 설계
- Convention
- License

--- a/SeaHawk-Docs/Dockerfile
+++ b/SeaHawk-Docs/Dockerfile
@@ -7,5 +7,5 @@ RUN pip install --upgrade pip && \
 				mkdocs-material \
 				pyyaml
 
-# CMD ["mkdocs", "serve", "-a", "0.0.0.0:8888"]
-CMD ["bin/sh"]
+CMD ["mkdocs", "serve", "-a", "0.0.0.0:8888"]
+# CMD ["bin/sh"]
