--- a/SeaHawk-Docs/mkdocs.yml
+++ b/SeaHawk-Docs/mkdocs.yml
@@ -4,13 +4,19 @@ theme:
   name: material
 #   name: readthedocs
 
-
 nav:
 - Home: index.md
 - Architecture:
-  - UseCase Scenario: Architecture/UseCase_Scenario.md
+  - Architecture/index.md
+  - UseCase Scenario: Architecture/Use_Case_Scenario.md
+  - UseCase Diagram: Architecture/Use_Case_Diagram.md
+  - Sequence Diagram: Architecture/Sequence_Diagram.md
 - Convention: 
   - Convention/coding-style.md
   - Convention/commit-convention.md
   - Convention/branch-strategy.md
 - License: License/license.md
+
+markdown_extensions:
+  - toc:
+      permalink: "#"
