docs: 아키텍처 설계 부분 업데이트

--- a/SeaHawk-Docs/mkdocs.yml
+++ b/SeaHawk-Docs/mkdocs.yml
@@ -11,6 +11,9 @@ nav:
   - UseCase Scenario: Architecture/Use_Case_Scenario.md
   - UseCase Diagram: Architecture/Use_Case_Diagram.md
   - Sequence Diagram: Architecture/Sequence_Diagram.md
+  - Architecture/CSCI.md
+  - Architecture/System_Architecture.md
+  - Architecture/Activity_Diagram.md
 - Convention: 
   - Convention/coding-style.md
   - Convention/commit-convention.md
